modified:   churn-prediction/conf/base/catalog.yml 	modified:   churn-prediction/src/churn_prediction/pipelines/data_processing/pipeline.py 	modified:   churn-prediction/src/churn_prediction/pipelines/data_science/nodes.py 	modified:   churn-prediction/src/churn_prediction/pipelines/data_science/pipeline.py

--- a/churn-prediction/conf/base/catalog.yml
+++ b/churn-prediction/conf/base/catalog.yml
@@ -28,3 +28,7 @@ classifier:
   type: pickle.PickleDataSet
   filepath: data/06_models/classifier.pickle
   versioned: true
+
+resultado_teste:
+  type: pandas.CSVDataSet
+  filepath: data/07_model_output/resultado_teste.csv
